package de.fhdw.knn.network.layer;

import de.fhdw.knn.network.neuron.Neuron;

public abstract class Layer {

    public abstract Neuron[] neurons();

}
