package de.fhdw.knn.network.neuron;

public abstract class Neuron {

    public abstract void compute();

    public abstract double output();

}
