package de.fhdw.knn.trainer.optimization;

public interface OptimizationFunction {
}
